<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">냥비요정</string>
    <!-- Toast description   -->
    <string name="toast_back_pressed">한번 더 이전 버튼을 누르면 앱을 종료합니다</string>
    <string name="toast_exist_email">중복된 이메일 입니다</string>
    <string name="toast_confirm_info">입력 정보를 다시 확인 해 주세요</string>
    <string name="toast_only_digits">숫자만 입력해 주세요</string>
    <string name="toast_check_day_range">날짜 범위를 다시 확인해 주세요</string>

    <!-- Bottom navigation title   -->
    <string name="bottom_navigation_home_title">홈</string>
    <string name="bottom_navigation_ranking_title">랭킹</string>
    <string name="bottom_navigation_setting_title">세팅</string>

    <!-- FragHomeTabList   -->
    <string name="frag_home_history_title">내역</string>
    <string name="frag_home_calendar_title">달력</string>
    <string name="frag_home_statistics_title">통계</string>

    <!-- Calculator Description   -->
    <string name="one_dollar">+1천</string>
    <string name="five_dollar">+5천</string>
    <string name="ten_dollar">+1만</string>
    <string name="fifty_dollar">+5만</string>
    <string name="hundred_dollar">+10만</string>

    <!-- Button Description   -->
    <string name="complete">입력완료</string>
    <string name="frag_home_history_add_waste">낭비 추가하기</string>
    <string name="frag_choice_sign_in">냥비요정은 처음이에요!</string>
    <string name="frag_choice_sign_up">이미 가입되어 있어요:)</string>

    <!-- TextView Description -->
    <string name="cat_cheeze">치즈 냥</string>
    <string name="cat_grey">그레 냥</string>
    <string name="my">MY</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="nickname">닉네임</string>
    <string name="every_month">매 월</string>
    <string name="set_amount_hint">예) 30000</string>
    <string name="set_every_month_hint">예) 15</string>
    <string name="find_password"><u>비밀번호 찾기</u></string>
    <string name="password_hint">영어 + 숫자 조합의 8자 이상</string>
    <string name="email_hint">예) abcdefg123@gmail.com</string>
    <string name="view_password">비밀번호 보기</string>
    <string name="money_unit">%s원</string>
    <string name="nickname_hint">김낭비</string>
    <string name="restore">복원</string>
    <string name="back_up">백업</string>
    <string name="week">이번 주</string>
    <string name="month">이번 달</string>
    <string name="year">올 해</string>
    <string name="whole_day">전체 기간</string>

    <string name="frag_home_history_wasteful_text">%s님 오늘 하루</string>
    <string name="frag_home_history_wasteful_description"> 을 낭비했어요!</string>
    <string name="frag_home_history_wasteful_tip">오 마이갓! 감당 가능한 낭비인가요?</string>
    <string name="frag_home_history_chart_gt_average_value">%d회!</string>
    <string name="frag_home_history_chart_average">평균 %s원</string>
    <string name="frag_home_history_today_waste_history">오늘 낭비 내역</string>
    <string name="frag_home_history_waste_is_empty">낭비 내역이 비어있어요!</string>
    <string name="frag_home_history_overwasting_this_week">이번주 초과낭비는</string>
    <string name="frag_home_calendar_month">%d년 %d월</string>
    <string name="frag_add_waste_item_waste_amount_title">낭비 금액</string>
    <string name="frag_add_waste_item_waste_amount_eg">예) 15,000원</string>
    <string name="frag_add_waste_item_memo_title">메모로 기록해야 할 낭비가 있나요?</string>
    <string name="frag_add_waste_item_content_title">낭비 항목 및 메모</string>
    <string name="frag_add_waste_item_memo_hint">띄어쓰기 포함 최대 15자</string>
    <string name="dialog_inout_waste_item_amount_title">금액을 입력하세요</string>

    <string name="waste_item_alcohol">술</string>
    <string name="waste_item_cigarette">담배</string>
    <string name="waste_item_coffee">커피</string>
    <string name="waste_item_shopping">충동 쇼핑</string>
    <string name="waste_item_snack">군것질</string>
    <string name="waste_item_taxi">택시</string>
    <string name="waste_item_latefood">야식</string>
    <string name="waste_item_game">게임</string>
    <string name="waste_item_etc">직접 입력</string>

    <string name="frag_home_calendar_month_total_description">낭비 금액</string>

    <string name="frag_splash_app_description">낭비 어디까지 해봤냥?\n당신의 낭비습관을 고쳐줄 친구</string>
    <string name="frag_sign_in_description">오랜만이에요:)\n다시 만나서 너무 기뻐요!</string>
    <string name="frag_sign_in_long_time_no_see">오랜만이야!</string>

    <string name="frag_find_password_title">비밀번호 찾기</string>
    <string name="frag_find_password_description">이메일을 입력해주시면 이메일로 비밀번호 일부를 전송해드려요</string>

    <string name="frag_send_password_to_sign_in">로그인 하러가기</string>
    <string name="frag_send_password_title">이메일로 비밀번호가 전송되었습니다!</string>
    <string name="frag_send_password_description">비밀번호의 일부(앞4자리)가 전송되었습니다.\n이메일 확인 후 로그인을 시도해주세요 :)</string>

    <string name="frag_sign_up_1_title">안녕하세요,\n만나서 반가워요!</string>
    <string name="frag_sign_up_1_description">당신이 누구인지 궁금해요!</string>

    <string name="frag_sign_up_2_title">당신의\n낭비 스타일이 궁금해요!</string>
    <string name="frag_sign_up_2_description">우리 더 친해져봐요 :)</string>
    <string name="frag_sign_up_2_set_amount_title">하루 동안 어느정도의 낭비가 적당하다고 생각하나요?</string>
    <string name="frag_sign_up_2_set_amount_description">하루 적정 낭비 금액을 설정해봐요 :)</string>
    <string name="frag_sign_up_2_set_start_day_title">매 월 시작일을 정해봐요!</string>
    <string name="frag_sign_up_2_set_start_day_description">예를들면 월급날, 용돈 받는 날 등이 되겠네요!</string>
    <string name="frag_sign_up_2_notice">알려주신 정보를 바탕으로 어플이 구성되며\n‘마이페이지 -낭비설정’에서 수정이 가능해요</string>

    <string name="frag_sign_up_3_title">마지막으로,\n당신의 냥비요정을 선택해주세요</string>
    <string name="frag_sign_up_3_btn_choice">선택하기</string>

    <string name="frag_setting_main_description">안녕하세요, 반가워요</string>
    <string name="frag_setting_main_user_info_title">기본 정보 수정</string>
    <string name="frag_setting_main_set_waste">낭비 설정</string>
    <string name="frag_setting_main_set_user">내 정보 변경</string>
    <string name="frag_setting_main_set_push">푸시 알림 설정</string>
    <string name="frag_setting_main_app_info_title">앱 설정</string>

    <string name="frag_setting_main_app_version_title">어플 버전</string>
    <string name="frag_setting_main_sign_out">로그아웃</string>
    <string name="frag_setting_main_withdraw">탈퇴</string>
    
    <string name="frag_choice_cheeze_title">그러다 통장이 너무 가벼워져서 둥둥 뜨겠다냥</string>
    <string name="frag_choice_cheeze_description">낭비를 줄이려고 노력하는 당신을 위해 귀여운 쓴 소리도\n마다하지 않는 치즈냥과 함께 낭비 습관을 고쳐볼까요?</string>

    <string name="frag_choice_grey_title">괜찮다냥 나랑 앞으로 천천히 줄여나가보자냥</string>
    <string name="frag_choice_grey_description">‘쓴소리는 오히려 악효과가 있는법!’ 이라고 생각하는 당신을 위해\n그레냥과 함께 부드러우면서도 순조로운 낭비습관 고치기!</string>

    <string name="frag_home_statistics_range_description">동안</string>
    <string name="frag_home_statistics_total_amount_description">을 낭비 했어요!</string>
    <!-- ControlBar Description -->
    <string name="add_waste">낭비추가</string>

    <!-- Calender Description -->
    <string name="calender_month">월</string>
    <string name="calender_sun">일</string>
    <string name="calender_mon">월</string>
    <string name="calender_tue">화</string>
    <string name="calender_wed">수</string>
    <string name="calender_thu">목</string>
    <string name="calender_fri">금</string>
    <string name="calender_sat">토</string>
</resources>